# friendly-rating

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  railway.cron.json  railway.cron.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
apps/ratings/: apps.py  forms.py  health.py  media_storage.py  models.py  notifications.py  score_rules.py  urls.py
apps/ratings/api/: __init__.py  authentication.py  contracts.py  exceptions.py  parsers.py  renderers.py  serializers.py  urls.py  views.py
apps/ratings/migrations/: 0005_rename_relationship_and_push_fields.py  0007_scorechangecomment.py  0008_media_attachments.py  0009_diaryentry.py  0010_diary_entry_media_attachments.py  0011_diaryentrycomment.py
apps/ratings/participant_provisioning/: __init__.py  contracts.py  environment.py  inspection.py  operations.py  service.py  snapshot.py
apps/ratings/services/: __init__.py  diary_entries.py  diary_entry_comments.py  media_cleanup.py  media_uploads.py  push_devices.py  score_change_comments.py  score_changes.py
apps/ratings/tests/: conftest.py  factories.py  http_helpers.py  test_api_schema.py  (+34 more)
config/: ci_production_settings.py  r2-cors.json  settings.py  urls.py
docs/agent/: code-conventions.md  testing.md
ratings/: admin.py  forms.py  models.py  notifications.py  participant_provisioning.py  security.py  services.py  tests.py  urls.py  views.py
ratings/migrations/: 0001_initial.py  0002_participant_participant_slot_is_first_or_second.py  0003_alter_scorechange_reason.py  0004_pushdevice.py  0006_rename_domain_tables.py
ratings/tests/: factories.py  test_authentication.py  test_health.py  test_migrations.py  test_models.py  test_provision_participants.py  test_push_notifications.py  test_pwa.py  test_score_concurrency.py  test_score_rules.py  test_score_workflow.py  test_services.py  test_views.py
scripts/: check
templates/: base.html  service-worker.js
templates/ratings/: _messages.html  history.html  home.html  login.html
(+40 files in other folders)
