[project]
name = "friendly-rating"
version = "0.1.0"
description = "A private relationship rating app for two participants"
requires-python = ">=3.13,<3.14"
dependencies = [
    "Django==5.2.16",
    "dj-database-url==3.1.2",
    "django-axes==8.3.1",
    "djangorestframework==3.17.1",
    "drf-spectacular==0.30.0",
    "firebase-admin==7.5.0",
    "gunicorn==23.0.0",
    "psycopg[binary]==3.3.4",
    "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
    "django-stubs==5.2.9",
    "djangorestframework-stubs==3.16.9",
    "pyrefly==1.1.1",
    "pytest==9.1.1",
    "pytest-django==4.12.0",
    "ruff==0.15.22",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
addopts = "-ra --strict-config --strict-markers"

[tool.pyrefly]
preset = "default"
python-version = "3.13"
project-includes = ["apps", "config", "manage.py"]
project-excludes = ["apps/ratings/migrations/**"]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = ["apps/ratings/migrations"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "DJ"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
